--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,49 @@
         android:theme="@style/Theme.GesionJardin"
         tools:targetApi="31">
         <activity
+            android:name=".jardinier.ListePlantesJardinActivity"
+            android:exported="false" />
+        <activity
+            android:name=".jardinier.DetailJardinActivity"
+            android:exported="false" />
+        <activity
+            android:name=".jardinier.AjouterJardinActivity"
+            android:exported="false" />
+        <activity
+            android:name=".jardinier.ListeJardinsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".jardinier.JardinierHomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.DetailPlanteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.AjouterPlanteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.ListePlantesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".jardinier.JardinierDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.JardinierListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.AdminHomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".jardinier.RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
